# mekon-cli

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: code-standards.md  project-overview-pdr.md  system-architecture.md
plans/260209-0339-terminal-dashboard/: plan.md
src/: __init__.py  main.py
src/commands/: __init__.py  agents.py  dashboard.py  devops.py  init_cmd.py  logs.py  market.py  marketing.py  recipe.py  revenue.py  system.py
src/core/: __init__.py  collectors.py  config.py  console.py  engine.py  logger.py
src/utils/: __init__.py
tests/: __init__.py  test_cli.py
